--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snake Game</title>
+  <title>Snake Game 🐍</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="game-container">
+  <header>
     <h1>🐍 Snake Game</h1>
-    <canvas id="gameCanvas"></canvas>
-    
-    <div class="controls">
-      <button onclick="changeDirection('UP')">⬆️</button><br>
-      <button onclick="changeDirection('LEFT')">⬅️</button>
-      <button onclick="changeDirection('DOWN')">⬇️</button>
-      <button onclick="changeDirection('RIGHT')">➡️</button>
-    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="snake.html">Play Game</a>
+    </nav>
+  </header>
 
-    <button id="restartBtn" onclick="restartGame()">🔄 Restart</button>
-  </div>
+  <main>
+    <section class="hero">
+      <h2>Welcome to My Awesome Website 🚀</h2>
+      <p>Enjoy playing Snake Game online. More features coming soon!</p>
+      <a href="snake.html" class="btn">🎮 Play Now</a>
+    </section>
+  </main>
 
   <footer>
-    <p>Made with ❤️ by Gautam & Sulla</p>
+    <p>© 2025 Gautam. Built with ❤️</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
