--- a/index.html
+++ b/index.html
@@ -1,45 +1,38 @@
-<!doctype html>
-<html lang="hi">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GameZone — by Gautam</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GameZone</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="home">
-  <header class="topbar">
-    <h1>🎮 GameZone</h1>
-    <p>Made with ❤️ by Gautam & Sulla</p>
-  </header>
+<body>
+  <div class="container">
 
-  <main class="grid">
-    <a class="card" href="snake.html">
-      <div class="icon">🐍</div>
+    <!-- Games List -->
+    <div class="game-card">
+      <img src="snake.png" alt="Snake" class="game-icon">
       <h2>Snake</h2>
       <p>Touch controls + Restart</p>
-    </a>
+    </div>
 
-    <a class="card" href="tictactoe.html">
-      <div class="icon">⭕❌</div>
+    <div class="game-card">
+      <img src="tic.png" alt="Tic-Tac-Toe" class="game-icon">
       <h2>Tic-Tac-Toe vs Bot</h2>
       <p>Easy / Normal AI 🤖</p>
-    </a>
+    </div>
 
-    <a class="card" href="chess.html">
-      <div class="icon">♟️</div>
+    <div class="game-card">
+      <img src="chess.png" alt="Chess" class="game-icon">
       <h2>Chess</h2>
       <p>Full chessboard + legal moves</p>
-    </a>
+    </div>
 
-    <a class="card" href="ludo.html">
-      <div class="icon">🎲</div>
-      <h2>Ludo Lite</h2>
-      <p>2–4 Players • Dice + Move</p>
-    </a>
-  </main>
+  </div>
 
-  <footer class="foot">
-    <small>© 2025 GameZone</small>
+  <!-- Footer -->
+  <footer>
+    Made with ❤️ by Gautam
   </footer>
 </body>
 </html>
