--- a/index.html
+++ b/index.html
@@ -8,31 +8,37 @@
 </head>
 <body>
   <div class="container">
-
-    <!-- Games List -->
     <div class="game-card">
-      <img src="snake.png" alt="Snake" class="game-icon">
+      <img src="https://img.icons8.com/emoji/96/000000/snake-emoji.png" alt="Snake">
       <h2>Snake</h2>
       <p>Touch controls + Restart</p>
+      <a href="snake.html" class="play-btn">Play</a>
     </div>
 
     <div class="game-card">
-      <img src="tic.png" alt="Tic-Tac-Toe" class="game-icon">
+      <img src="https://img.icons8.com/fluency/96/000000/delete-sign.png" alt="Tic Tac Toe">
       <h2>Tic-Tac-Toe vs Bot</h2>
       <p>Easy / Normal AI 🤖</p>
+      <a href="Tictactoe.html" class="play-btn">Play</a>
     </div>
 
     <div class="game-card">
-      <img src="chess.png" alt="Chess" class="game-icon">
+      <img src="https://img.icons8.com/fluency/96/000000/chess-pawn.png" alt="Chess">
       <h2>Chess</h2>
       <p>Full chessboard + legal moves</p>
+      <a href="chess.html" class="play-btn">Play</a>
     </div>
 
+    <div class="game-card">
+      <img src="https://img.icons8.com/fluency/96/000000/dice.png" alt="Ludo">
+      <h2>Ludo</h2>
+      <p>Play with Dice 🎲</p>
+      <a href="ludo.html" class="play-btn">Play</a>
+    </div>
   </div>
 
-  <!-- Footer -->
   <footer>
-    Made with ❤️ by Gautam
+    Made with ❤️ by Gautam & Sulla
   </footer>
 </body>
 </html>
