--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GameZone</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="container">
+
     <div class="game-card">
-      <img src="https://img.icons8.com/emoji/96/000000/snake-emoji.png" alt="Snake">
+      <img src="https://img.icons8.com/emoji/96/snake-emoji.png" alt="Snake"/>
       <h2>Snake</h2>
       <p>Touch controls + Restart</p>
-      <a href="snake.html" class="play-btn">Play</a>
+      <a class="play-btn" href="snake.html">Play</a>
     </div>
 
     <div class="game-card">
-      <img src="https://img.icons8.com/fluency/96/000000/delete-sign.png" alt="Tic Tac Toe">
+      <img src="https://img.icons8.com/fluency/96/delete-sign.png" alt="Tic Tac Toe"/>
       <h2>Tic-Tac-Toe vs Bot</h2>
-      <p>Easy / Normal AI 🤖</p>
-      <a href="Tictactoe.html" class="play-btn">Play</a>
+      <p>Unbeatable Minimax 🤖</p>
+      <a class="play-btn" href="Tictactoe.html">Play</a>
     </div>
 
     <div class="game-card">
-      <img src="https://img.icons8.com/fluency/96/000000/chess-pawn.png" alt="Chess">
+      <img src="https://img.icons8.com/fluency/96/chess-pawn.png" alt="Chess"/>
       <h2>Chess</h2>
-      <p>Full chessboard + legal moves</p>
-      <a href="chess.html" class="play-btn">Play</a>
+      <p>Legal moves + simple bot</p>
+      <a class="play-btn" href="chess.html">Play</a>
     </div>
 
     <div class="game-card">
-      <img src="https://img.icons8.com/fluency/96/000000/dice.png" alt="Ludo">
+      <img src="https://img.icons8.com/fluency/96/dice.png" alt="Ludo"/>
       <h2>Ludo</h2>
-      <p>Play with Dice 🎲</p>
-      <a href="ludo.html" class="play-btn">Play</a>
+      <p>Rebuild in progress 🎯</p>
+      <a class="play-btn" href="ludo.html">Open</a>
     </div>
+
   </div>
 
-  <footer>
-    Made with ❤️ by Gautam & Sulla
-  </footer>
+  <footer>Made with ❤️ by Gautam &amp; Sulla</footer>
 </body>
 </html>
