--- a/chess.html
+++ b/chess.html
@@ -1,79 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chess</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard-1.0.0.min.css">
-<style>
-  .wrap{display:flex;flex-direction:column;align-items:center;padding:16px;gap:10px}
-  #board{width: 340px; max-width: 92vw;}
-  .msg{color:#a7c3ff}
-</style>
+    <meta charset="UTF-8">
+    <title>Realistic Chess</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="wrap">
-  <div id="board"></div>
-  <div class="msg" id="status"></div>
-  <div style="display:flex;gap:10px">
-    <a href="#" id="new" class="play-btn">New Game</a>
-    <a href="index.html" class="play-btn">Home</a>
-  </div>
-</div>
+    <h1>Realistic Chess Game</h1>
+    <div id="chessboard"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.13.4/chess.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/chessboard-1.0.0.min.js"></script>
-<script>
-  const game = new Chess();
-  let board, playingAs='white'; // you play white, bot black
-
-  function onDragStart (source, piece){
-    if (game.game_over()) return false;
-    if (playingAs==='white' && piece.search(/^b/) !== -1) return false;
-    if (playingAs==='black' && piece.search(/^w/) !== -1) return false;
-  }
-
-  function onDrop(source, target){
-    const move = game.move({from: source, to: target, promotion: 'q'});
-    if (move === null) return 'snapback';
-    updateStatus();
-    window.setTimeout(botMove, 200);
-  }
-
-  function onSnapEnd(){ board.position(game.fen()); }
-
-  function botMove(){
-    if (game.game_over()) return;
-    const moves = game.moves({verbose:true});
-    // prefer captures, else random
-    const captures = moves.filter(m=> m.flags.includes('c') || m.flags.includes('e'));
-    const choice = (captures.length ? captures : moves)[Math.floor(Math.random()* (captures.length?captures.length:moves.length))];
-    game.move(choice);
-    board.position(game.fen());
-    updateStatus();
-  }
-
-  function updateStatus(){
-    let status = '';
-    if (game.in_checkmate()) status = 'Checkmate!';
-    else if (game.in_draw()) status = 'Draw.';
-    else status = (game.turn()==='w'?'White':'Black') + ' to move';
-    if (game.in_check()) status += ' — Check!';
-    document.getElementById('status').textContent = status;
-  }
-
-  function start(){
-    game.reset();
-    board = Chessboard('board', {
-      position: 'start',
-      draggable: true,
-      onDragStart, onDrop, onSnapEnd
-    });
-    updateStatus();
-  }
-
-  document.getElementById('new').onclick = (e)=>{e.preventDefault(); start();}
-  start();
-</script>
+    <script src="script.js"></script>
 </body>
 </html>
+
