--- a/chess.html
+++ b/chess.html
@@ -1,15 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Realistic Chess</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Chess Game</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/css/chessboard-1.0.0.min.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: #f0f0f0;
+      height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      margin-bottom: 20px;
+    }
+    #board {
+      width: 500px;
+      max-width: 90vw;
+    }
+  </style>
 </head>
 <body>
-    <h1>Realistic Chess Game</h1>
-    <div id="chessboard"></div>
+  <h1>♟️ Chess vs Robot 🤖</h1>
+  <div id="board"></div>
 
-    <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/js/chessboard-1.0.0.min.js"></script>
+  <script>
+    var board = null
+    var game = new Chess()
+
+    function makeRandomMove () {
+      var possibleMoves = game.moves()
+
+      // game over check
+      if (game.game_over()) return
+
+      var randomIdx = Math.floor(Math.random() * possibleMoves.length)
+      game.move(possibleMoves[randomIdx])
+      board.position(game.fen())
+    }
+
+    function onDragStart (source, piece) {
+      if (game.game_over()) return false
+
+      // only allow white pieces for human
+      if (piece.search(/^b/) !== -1) {
+        return false
+      }
+    }
+
+    function onDrop (source, target) {
+      var move = game.move({
+        from: source,
+        to: target,
+        promotion: 'q' // promote to queen for simplicity
+      })
+
+      // illegal move
+      if (move === null) return 'snapback'
+
+      // robot move after 250ms
+      window.setTimeout(makeRandomMove, 250)
+    }
+
+    var config = {
+      draggable: true,
+      position: 'start',
+      onDragStart: onDragStart,
+      onDrop: onDrop
+    }
+    board = Chessboard('board', config)
+  </script>
 </body>
 </html>
-
