--- a/chess.html
+++ b/chess.html
@@ -3,78 +3,114 @@
 <head>
   <meta charset="UTF-8">
   <title>Chess Game</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/css/chessboard-1.0.0.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
       display: flex;
-      justify-content: center;
-      align-items: center;
       flex-direction: column;
-      background: #f0f0f0;
+      align-items: center;
+      justify-content: center;
       height: 100vh;
-      margin: 0;
+      background: linear-gradient(120deg, #74ebd5, #9face6);
+      font-family: Arial, sans-serif;
     }
     h1 {
       margin-bottom: 20px;
+      color: #fff;
     }
     #board {
-      width: 500px;
-      max-width: 90vw;
+      width: 400px;
+      margin-bottom: 20px;
+    }
+    #status {
+      font-size: 18px;
+      color: white;
+    }
+    button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #333;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #555;
     }
   </style>
 </head>
 <body>
-  <h1>♟️ Chess vs Robot 🤖</h1>
+  <h1>♟️ Chess with AI</h1>
   <div id="board"></div>
+  <div id="status"></div>
+  <button onclick="restartGame()">Restart Game</button>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/js/chessboard-1.0.0.min.js"></script>
+  <!-- Libraries -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.13.4/chess.min.js"></script>
+  <script src="https://unpkg.com/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
+
   <script>
-    var board = null
-    var game = new Chess()
+    let board = null;
+    let game = new Chess();
 
-    function makeRandomMove () {
-      var possibleMoves = game.moves()
+    function makeRandomMove() {
+      const possibleMoves = game.moves();
+      if (possibleMoves.length === 0) return;
 
-      // game over check
-      if (game.game_over()) return
-
-      var randomIdx = Math.floor(Math.random() * possibleMoves.length)
-      game.move(possibleMoves[randomIdx])
-      board.position(game.fen())
+      const randomIdx = Math.floor(Math.random() * possibleMoves.length);
+      game.move(possibleMoves[randomIdx]);
+      board.position(game.fen());
+      updateStatus();
     }
 
-    function onDragStart (source, piece) {
-      if (game.game_over()) return false
-
-      // only allow white pieces for human
-      if (piece.search(/^b/) !== -1) {
-        return false
-      }
+    function onDragStart(source, piece) {
+      if (game.game_over()) return false;
+      if (piece.startsWith('b')) return false; // only white moves (AI is black)
     }
 
-    function onDrop (source, target) {
-      var move = game.move({
+    function onDrop(source, target) {
+      const move = game.move({
         from: source,
         to: target,
-        promotion: 'q' // promote to queen for simplicity
-      })
+        promotion: 'q'
+      });
 
-      // illegal move
-      if (move === null) return 'snapback'
+      if (move === null) return 'snapback';
 
-      // robot move after 250ms
-      window.setTimeout(makeRandomMove, 250)
+      updateStatus();
+
+      window.setTimeout(makeRandomMove, 500); // AI plays after 0.5s
     }
 
-    var config = {
+    function updateStatus() {
+      let status = '';
+
+      if (game.in_checkmate()) {
+        status = 'Game over, ' + (game.turn() === 'w' ? 'Black' : 'White') + ' wins!';
+      } else if (game.in_draw()) {
+        status = 'Game over, draw!';
+      } else {
+        status = (game.turn() === 'w' ? 'White' : 'Black') + ' to move';
+      }
+
+      document.getElementById('status').innerHTML = status;
+    }
+
+    function restartGame() {
+      game = new Chess();
+      board.start();
+      updateStatus();
+    }
+
+    board = Chessboard('board', {
       draggable: true,
       position: 'start',
       onDragStart: onDragStart,
       onDrop: onDrop
-    }
-    board = Chessboard('board', config)
+    });
+
+    updateStatus();
   </script>
 </body>
 </html>
