--- a/chess.html
+++ b/chess.html
@@ -4,14 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chess Game</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.12.0/chess.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.js"></script>
+
+  <!-- Chessboard.js CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.css"/>
+
+  <!-- Chess.js and Chessboard.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.js"></script>
+
+  <style>
+    body {
+      background: #2c3e50;
+      color: white;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 20px;
+    }
+    #board {
+      width: 90vw;
+      max-width: 400px;
+      margin: auto;
+    }
+    #status {
+      margin-top: 15px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <div id="board" style="width: 350px; margin: auto;"></div>
-  <p id="status" style="text-align:center; font-weight: bold; margin-top: 10px;"></p>
-  <script src="chess.js"></script>
+  <h1>♟️ Play Chess</h1>
+  <div id="board"></div>
+  <p id="status">Game Loaded...</p>
+
+  <script>
+    var board = null
+    var game = new Chess()
+
+    function onDragStart (source, piece) {
+      if (game.game_over()) return false
+      if (piece.search(/^b/) !== -1) return false  // only white player moves
+    }
+
+    function makeRandomMove () {
+      var possibleMoves = game.moves()
+      if (possibleMoves.length === 0) return
+
+      var randomIdx = Math.floor(Math.random() * possibleMoves.length)
+      game.move(possibleMoves[randomIdx])
+      board.position(game.fen())
+    }
+
+    function onDrop (source, target) {
+      var move = game.move({
+        from: source,
+        to: target,
+        promotion: 'q'
+      })
+
+      if (move === null) return 'snapback'
+      window.setTimeout(makeRandomMove, 500) // AI plays after 0.5s
+    }
+
+    function onSnapEnd () {
+      board.position(game.fen())
+    }
+
+    board = Chessboard('board', {
+      draggable: true,
+      position: 'start',
+      onDragStart: onDragStart,
+      onDrop: onDrop,
+      onSnapEnd: onSnapEnd
+    })
+  </script>
 </body>
 </html>
