--- a/chess.html
+++ b/chess.html
@@ -4,106 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chess Game</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f0f0f0;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      margin-bottom: 20px;
-    }
-    #board {
-      width: 400px;
-      margin: auto;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      border: none;
-      background: #333;
-      color: #fff;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #555;
-    }
-  </style>
-  <!-- Chessboard.js and Chess.js CDN -->
+  <link rel="stylesheet" href="style.css">
+  <!-- Chessboard.js CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.css">
 </head>
 <body>
-
   <h1>♟️ Online Chess Game</h1>
   <div id="board"></div>
   <button onclick="resetGame()">♻️ Reset Game</button>
   <p id="status"></p>
 
+  <!-- External JS Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.13.4/chess.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.js"></script>
-  <script>
-    var board = null
-    var game = new Chess()
 
-    function onDragStart (source, piece) {
-      if (game.game_over() || 
-          (game.turn() === 'w' && piece.search(/^b/) !== -1) ||
-          (game.turn() === 'b' && piece.search(/^w/) !== -1)) {
-        return false
-      }
-    }
-
-    function onDrop (source, target) {
-      var move = game.move({
-        from: source,
-        to: target,
-        promotion: 'q'
-      })
-
-      if (move === null) return 'snapback'
-      updateStatus()
-    }
-
-    function onSnapEnd () {
-      board.position(game.fen())
-    }
-
-    function updateStatus () {
-      var status = ''
-
-      if (game.in_checkmate()) {
-        status = 'Game over, ' + (game.turn() === 'w' ? 'Black' : 'White') + ' wins by Checkmate!'
-      } else if (game.in_draw()) {
-        status = 'Game over, Draw!'
-      } else {
-        status = (game.turn() === 'w' ? 'White' : 'Black') + ' to move'
-        if (game.in_check()) {
-          status += ', ' + (game.turn() === 'w' ? 'White' : 'Black') + ' is in Check!'
-        }
-      }
-
-      document.getElementById('status').innerText = status
-    }
-
-    function resetGame () {
-      game.reset()
-      board.start()
-      updateStatus()
-    }
-
-    var config = {
-      draggable: true,
-      position: 'start',
-      onDragStart: onDragStart,
-      onDrop: onDrop,
-      onSnapEnd: onSnapEnd
-    }
-    board = Chessboard('board', config)
-    updateStatus()
-  </script>
+  <!-- Our Script -->
+  <script src="script.js"></script>
 </body>
 </html>
